# kime-board

./: .gitignore  README.md  TREE.txt
apps/agent/: .env.example  Dockerfile  README.md  pyproject.toml
apps/agent/src/: __init__.py  config.py  main.py  server.py
apps/agent/src/agents/: __init__.py  root_agent.py
apps/agent/src/agents/workflows/: __init__.py  draft_actions_skill.py  gap_questioner.py  meeting_structurer.py  reply_integrator.py
apps/agent/src/api_client/: __init__.py  client.py  endpoints.py
apps/agent/src/auth/: __init__.py  oidc.py
apps/agent/src/kimeboard_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/agent/src/models/: __init__.py  schemas.py
apps/agent/src/observability/: __init__.py  logger.py  runlog.py
apps/agent/src/prompts/: draft_actions.md  gap_questioner.md  meeting_structurer.md  reply_integrator.md  system.md
apps/agent/src/tools/: __init__.py  kimeboard_api_tools.py
apps/agent/src/utils/: __init__.py  idempotency.py  limits.py  text.py
apps/agent/tests/: test_idempotency.py  test_schemas.py
apps/api/: .env.example  .gitignore  README.md  firebase.json  firestore.indexes.json  next.config.mjs  package-lock.json  package.json  tsconfig.json
apps/web/: README.md  next.config.ts  package-lock.json  package.json
docs/: zenn.md
docs/agent/: gap-questioner-design.md  meeting-structurer-design.md  prompt-implementation-map.md  reply-integrator-design.md
docs/doc/: architecture.html  color.html  slide.html
docs/local/: README.md
docs/plans/: agent-plan.md  (+3 more)
infra/: .gitignore  README.md
(+228 files in other folders)
